Correções de bugs e arquivo de configuração

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.open-in-view=true
 
-spring.profiles.active=prod
+spring.profiles.active=test
 
 jwt.secret=sequenciaDeCaracteresParaSeremEmbarralhadosJuntossAoJWT
 jwt.expiration=20160000
