Alterações no arquivo de build

--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -11,12 +11,15 @@
 	</parent>
 	<groupId>com.guardians</groupId>
 	<artifactId>Backend</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>Backend</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Aplicativo de ajuda via notificação em uma rede solidaria de proteção.</description>
+
 	<properties>
 		<java.version>11</java.version>
+		<maven.test.skip>true</maven.test.skip>
 	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
